fix: enhance branch handling in user management and authorization checks in controllers